[WNMGDS-2153] Fix aria-disabled button styles (#2334)
* Qualify aria-disabled selector with "true" values only

* Don't let other interactive statuses cause disabled buttons to not look disabled

* Temporarily change a story for testing

* Revert "Temporarily change a story for testing"

This reverts commit 35ff6b296510dfdb7783b0b6a4c09cd8906d6a5b.

--- a/packages/design-system/src/styles/components/_Button.scss
+++ b/packages/design-system/src/styles/components/_Button.scss
@@ -29,7 +29,7 @@
       text-decoration: none;
     }
 
-    &[aria-disabled] {
+    &[aria-disabled='true'] {
       pointer-events: none; // Needed to render disabled links correctly
     }
   }
@@ -62,7 +62,8 @@
   }
 
   &:disabled,
-  &[aria-disabled] {
+  &[aria-disabled='true'],
+  &[aria-disabled='true']:is(:hover, :hover:focus, :focus, :active, :active:focus) {
     background-color: var(--backgroundColor--d, var(--button__background-color--disabled));
     border-color: var(--borderColor--d, var(--button__border-color--disabled));
     color: var(--color--d, var(--button__color--disabled));
